--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
                 "task=match",
                 "detect=super_point",
                 "match=super_glue",
-                // "draw_matches=true"
+                "draw_matches=true"
             ],
             "cwd": "${workspaceFolder}/ICG/third_party/PointFeatureHub2",
             "console": "integratedTerminal",
@@ -207,6 +207,7 @@
                 "--detector_port=8080",
                 "--feature_port=9090",
                 "--enable_feature",
+                "--enable_refine"
             ],
             "console": "integratedTerminal",
             "justMyCode": true
