--- a/.hydra/overrides.yaml
+++ b/.hydra/overrides.yaml
@@ -1,3 +1,3 @@
-- +experiment=one_pose_prior.yaml
-- input.eval_dirs=[/home/robot-learning/Projects/SuperPose/data/cracker_box/cracker_box_4]
-- video_mode=image
+- +experiment=test_GATsSPG_custom.yaml
+- object_detect_mode=GT_box
+- save_wis3d=True
