--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -221,14 +221,11 @@
             "request": "launch",
             "program": "${workspaceFolder}/utils/rbot_to_icg.py",
             "args": [
-                "--tracker_name",
-                "bakingsoda",
-                "--model_dir",
-                "${workspaceFolder}/data/RBOT_dataset/bakingsoda",
-                "--eval_dir",
-                "${workspaceFolder}/data/RBOT_dataset/bakingsoda",
-                "--icg_dir",
-                "${workspaceFolder}/ICG/examples/generator_example_v2",
+                "--tracker_name=bakingsoda",
+                "--model_dir=${workspaceFolder}/data/RBOT_dataset",
+                "--sfm_dir=${workspaceFolder}/data/sfm_model",
+                "--eval_dir=${workspaceFolder}/data/RBOT_dataset",
+                "--icg_dir=${workspaceFolder}/ICG/examples/generator_example_v2",
                 "--detector_port=8080",
                 "--feature_port=9090",
                 "--enable_feature",
